--- a/www/templates/artist/detail.html
+++ b/www/templates/artist/detail.html
@@ -12,7 +12,7 @@
         </div>
         <div class="row body">
             <div class="col col-100">
-                <p class="date">{{view.artist.schedule | parseDate: 'EEEE, d MMMM'}}</p>
+                <p class="date" ng-if="view.scheduleActive">{{view.artist.schedule | parseDate: 'EEEE, d MMMM'}}</p>
                 <p class="time"><i class="ion-clock"> </i>&nbsp;{{view.artist.schedule | parseDate: 'HH:mm'}}</p>
                 <p class="stage-name"><i class="ion-location">&nbsp;{{view.artist.stage_name}}</i></p>
                 <hr>
