--- a/www/templates/info/map.html
+++ b/www/templates/info/map.html
@@ -1,6 +1,6 @@
 <ion-view>
     <ion-content class="map-how-get">
-        <img src="img/map/loading.gif" class="cont_trigger" id="id_waiting" />
+        <!--<img src="img/map/loading.gif" class="cont_trigger" id="id_waiting" />-->
 
         <!--<div class="tabs tabs-icon-only">-->
         <!--<a class="tab-item" ng-click="showMyLocation();" title="Mi ubicación">-->
@@ -16,6 +16,6 @@
             <img src="img/map/car.png" width="40px" />
         </a>
         <!--</div>-->
-        <div id="map-how-get" data-tap-disabled="true"></div>
+        <div id="map-how-get" data-tap-disabled="true" scroll="false"></div>
     </ion-content>
 </ion-view>
