--- a/www/templates/ticket/main.html
+++ b/www/templates/ticket/main.html
@@ -1,8 +1,8 @@
 <ion-view>
-    <ion-content scroll="false" class="ticket">
-        <iframe width="100%" height="500px" frameborder="0" id="tkt-iframe" scrolling="no"
+    <ion-content overflow-scroll="true" class="ticket">
+        <iframe frameborder="0" id="tkt-iframe" scrolling="no"
                 src="https://www.ticketea.com/entradas-festival-les-arts-2016/custom/"
-                style="overflow: hidden; height: 564px;">
+                style="overflow: hidden; height: 750px; width:100%">
         </iframe>
         <div class="partner">
             <a href="//www.ticketea.com/entradas-festival-les-arts-2016/" alt="Festival de les Arts 2016" title="ticketea">
