--- a/www/templates/user/sign_in.html
+++ b/www/templates/user/sign_in.html
@@ -1,5 +1,5 @@
 <ion-content class="login-content" scroll="false">
-    <div ng-show="view.show_login === 'options'">
+    <div class="div-form" ng-show="view.show_login === 'options'">
         <div class="title">
             <h4>Reg&iacute;strate ahora</h4>
             <span>Te llevar&aacute; &uacute;nicamente unos minutos</span>
@@ -12,7 +12,7 @@
             </div>
         </div>
     </div>
-    <div ng-show="view.show_login === 'form'">
+    <div class="div-form" ng-show="view.show_login === 'form'">
         <div class="form">
             <div class="field">
                 <div class="icon-field">
