--- a/www/templates/user/sign_up.html
+++ b/www/templates/user/sign_up.html
@@ -1,5 +1,5 @@
 <ion-content class="login-content" scroll="false">
-    <div>
+    <div class="div-form">
         <div class="form">
             <div class="field">
                 <div class="icon-field">
