--- a/www/templates/foodies/main.html
+++ b/www/templates/foodies/main.html
@@ -1,19 +1,33 @@
 <ion-view>
-    <ion-content has-bouncing="true">
-        <div class="row">
-            <div class="col">
-                <h2 class="text-center">Coolway</h2>
+    <ion-content has-bouncing="true" class="artist">
+        <div class="row subtitle filter" scroll="false">
+            <div class="col col-100">
+                <input type="search"
+                       ng-model="view.search"
+                       ng-focus="searchFocused = true"
+                       ng-blur="searchFocused = false"
+                       ng-change="scrollTop()"
+                       class="full-width">
+                <button ng-if="view.search.length"
+                        class="button button-icon ion-close input-button"
+                        ng-click="view.search = '' "> </button>
+                <button ng-if="!view.search.length"
+                        class="button button-icon ion-search input-button"> </button>
             </div>
         </div>
-        <div class="row">
-            <div class="col col-100">
-                <!--<iframe frameborder="0" width="480" height="270"-->
-                        <!--src="//www.dailymotion.com/embed/video/x3b41ua_festival-de-les-arts-2015-video-oficial_music?autoplay=1&mute=1"-->
-                        <!--allowfullscreen></iframe>-->
-                <iframe frameborder="0" width="355" height="450"
-                        src="//www.dailymotion.com/embed/video/x3b41ua_festival-de-les-arts-2015-video-oficial_music?autoplay=1&mute=1"
-                        allowfullscreen></iframe>
-            </div>
-            <div>
+        <div class="listed" scroll="true">
+            <ion-list>
+                <ion-item class="my-item"
+                          ng-repeat="item in getFoodiesList() | filter:view.search"
+                          item-height="getItemHeight(item)"
+                          id="{{ item.isLetter ? (item.letter + '_divider') : item.id}}"
+                          ng-style="{'line-height': getItemHeight(item) + 'px'}"
+                          ng-class="{'item-divider': item.isLetter}">
+                    <img ng-if="!item.isLetter" ng-src="{{view.server_image}}foodies/{{item.id}}/100/{{item.image_profile}}" alt="item.name" ng-click="showDetail({{ item.isLetter ? 0 : item.id}})">
+                    <p ng-click="showDetail({{ item.isLetter ? 0 : item.id}})">{{item.letter || item.name|cleanName}}</p>
+                    <!--<favorite ng-if="!item.isLetter" artist="item"/>-->
+                </ion-item>
+            </ion-list>
+        </div>
     </ion-content>
 </ion-view>
