--- a/www/templates/user/sign_in.html
+++ b/www/templates/user/sign_in.html
@@ -7,9 +7,9 @@
         <div class="options">
             <img src="img/login/facebook.png" ng-click="loginFacebook()">
             <img src="img/login/email.png" ng-click="view.show_login = 'form';">
-            <div class="later">
+            <!--<div class="later">
                 <a ng-click="later()">Registrarme m&aacute;s tarde</a>
-            </div>
+            </div>-->
         </div>
     </div>
     <div class="div-form" ng-show="view.show_login === 'form'" style="margin-top: 20px !important;">
