--- a/www/css/style.css
+++ b/www/css/style.css
@@ -627,12 +627,14 @@
 
 .artist .list .item{
     background-color: #F5E5C1 !important;
-    border-style: solid;
-    border-top: 1px solid #04041B !important;
-    margin: 0px 5px;
+    margin: 0 5px;
     height: 100px;
     max-height: 100px;
     border-bottom: none !important;
+}
+
+.artist .list .item-divider-artist{
+    border-top: 1px solid #04041B !important;
 }
 
 .artist .list .item-divider, .schedule .list .item-divider{
