--- a/www/templates/artist/list.html
+++ b/www/templates/artist/list.html
@@ -24,7 +24,7 @@
                           ng-style="{'line-height': getItemHeight(item) + 'px'}"
                           ng-class="{'item-divider' : item.isLetter, 'item-divider-artist' : lastArtist(item.isLetter)}" >
 
-                    <img ng-if="!item.isLetter" ng-src="{{view.server_image}}artists/{{item.id}}/100/{{item.image_profile}}" alt="item.name" ng-click="showDetail({{ item.isLetter ? 0 : item.id}})">
+                    <img ng-if="!item.isLetter"  err-SRC="img/artist/icon.png" ng-src="{{view.server_image}}artists/{{item.id}}/100/{{item.image_profile}}" alt="item.name" ng-click="showDetail({{ item.isLetter ? 0 : item.id}})">
                     <p ng-click="showDetail({{ item.isLetter ? 0 : item.id}})">{{item.letter || item.name|cleanName}}</p>
                     <favorite ng-if="!item.isLetter" artist="item"/>
                 </ion-item>
