--- a/www/templates/schedule/main.html
+++ b/www/templates/schedule/main.html
@@ -3,13 +3,13 @@
         <div class="row subtitle filter" ng-if="view.scheduleActive">
             <div class="col col-100">
                 <div class="days">
-                    <button class="button button-clear" ng-click="view.show_day = 9;" ng-class="{'active': view.show_day  == 9}">
+                    <button class="button button-clear" ng-click="setDay(9,'2016-06-09 00:00','2016-06-10 06:00')" ng-class="{'active': view.show_day  == 9}">
                         <img src="img/schedule/pro.png">
                     </button>
-                    <button class="button button-clear" ng-click="view.show_day = 10;" ng-class="{'active': view.show_day  == 10}">
+                    <button class="button button-clear" ng-click="setDay(10,'2016-06-10 08:00','2016-06-11 06:00')" ng-class="{'active': view.show_day  == 10}">
                         <img src="img/schedule/10.png">
                     </button>
-                    <button class="button button-clear" ng-click="view.show_day = 11;" ng-class="{'active': view.show_day  == 11}">
+                    <button class="button button-clear" ng-click="setDay(11,'2016-06-11 08:00','2016-06-12 06:00')" ng-class="{'active': view.show_day  == 11}">
                         <img src="img/schedule/11.png">
                     </button>
                 </div>
