Adding new sponsor

--- a/www/templates/info/sponsor.html
+++ b/www/templates/info/sponsor.html
@@ -73,5 +73,10 @@
                 <img ng-src="img/sponsor/gva.png">
             </div>
         </div>
+        <div class="row images">
+            <div class="col col-100">
+                <img ng-src="img/sponsor/ciudad.png">
+            </div>
+        </div>
     </ion-content>
 </ion-view>
