--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1330,6 +1330,10 @@
     padding: 0 !important;
 }
 
+.sponsor .images .col-100{
+    border-bottom: 1px solid #04041B;
+}
+
 .sponsor .images img{
     width: 100%;
 }
