--- a/www/templates/user/notifications.html
+++ b/www/templates/user/notifications.html
@@ -5,7 +5,7 @@
                 <div class="center" ng-click="showDetail({{item.id}})">
                     <p class="artist-name">{{item.name}}</p>
                     <p class="time">&nbsp;{{item.text}}</p>
-                    <p class="stage-name" ng-if="item.date.date"><i class="ion-clock"></i>&nbsp;{{item.date.date| parseDate: 'EEEE, d MMMM'}}</p>
+                    <p class="stage-name" ng-if="item.date.date"><i class="ion-clock"></i>&nbsp;{{item.date.date| parseDate: 'dddd, D MMMM'}}</p>
                 </div>
             </ion-item>
         </ion-list>
