--- a/www/templates/info/main.html
+++ b/www/templates/info/main.html
@@ -19,7 +19,7 @@
             <ion-item ng-click="openLink('http://www.cabodeplata.com/')">
                 4. Web
             </ion-item>
-            <ion-item ng-click="openLink('http://www.cabodeplata.com/wp-content/uploads/docs/Aviso_Legal_Cabo_de_Plata.pdf')">
+            <ion-item ng-click="openLink('http://www.festivaldelesarts.com/wp-content/uploads/2015/10/Aviso_Legal_Festival_de_les_Arts_2016.pdf')">
                 5. Aviso legal
             </ion-item>
         </ion-list>
