--- a/www/templates/info/sponsor.html
+++ b/www/templates/info/sponsor.html
@@ -2,7 +2,7 @@
     <ion-content overflow-scroll="true" class="sponsor">
         <div class="row filters" scroll="false">
             <div class="col col-100">
-                <h3>PATROCINADORES</h3>
+                <h3>Patrocinadores</h3>
             </div>
         </div>
         <div class="row subtitle">
@@ -12,10 +12,18 @@
         </div>
         <div class="row images">
             <div class="col col-50">
-                <img ng-src="img/sponsor/negrita.png">
+                <img ng-src="img/sponsor/heineken.png">
             </div>
             <div class="col col-50">
                 <img ng-src="img/sponsor/coolway.png">
+            </div>
+        </div>
+        <div class="row images">
+            <div class="col col-50">
+                <img ng-src="img/sponsor/kaiku.png">
+            </div>
+            <div class="col col-50">
+                <img ng-src="img/sponsor/negrita.png">
             </div>
         </div>
         <div class="row images">
@@ -31,15 +39,28 @@
                 <img ng-src="img/sponsor/underwood.png">
             </div>
             <div class="col col-50">
-                <img ng-src="img/sponsor/monbus.png">
+                <img ng-src="img/sponsor/blablacar.png">
             </div>
         </div>
         <div class="row images">
             <div class="col col-50">
-                <img ng-src="img/sponsor/blablacar.png">
+                <img ng-src="img/sponsor/monbus.png">
             </div>
             <div class="col col-50">
                 </br>
+            </div>
+        </div>
+        <div class="row subtitle">
+            <div class="col col-100">
+                <p>Medios Oficiales</p>
+            </div>
+        </div>
+        <div class="row images">
+            <div class="col col-50">
+                <img ng-src="img/sponsor/radio3.png">
+            </div>
+            <div class="col col-50">
+                <img ng-src="img/sponsor/ocimag.png">
             </div>
         </div>
         <div class="row subtitle">
@@ -48,11 +69,13 @@
             </div>
         </div>
         <div class="row images">
-            <div class="col col-50">
-                <img ng-src="img/sponsor/ayuntamiento barbate.png">
+            <div class="col col-100">
+                <img ng-src="img/sponsor/gva.png">
             </div>
-            <div class="col col-50">
-                </br>
+        </div>
+        <div class="row images">
+            <div class="col col-100">
+                <img ng-src="img/sponsor/ciudad.png">
             </div>
         </div>
     </ion-content>
