--- a/www/templates/info/weather.html
+++ b/www/templates/info/weather.html
@@ -2,7 +2,7 @@
     <ion-content overflow-scroll="true" class="weather" ng-init="getWeather()">
         <div class="row filters">
             <div class="col col-100">
-                <h3>TIEMPO</h3>
+                <h3>Tiempo</h3>
             </div>
         </div>
         <ion-list class="list">
