--- a/www/templates/menu/left.html
+++ b/www/templates/menu/left.html
@@ -31,10 +31,10 @@
             <img src="img/menu/category/transparent.gif">
             <a>ENTRADAS</a>
         </button>
-        <!--<button class="button button-clear category" menu-close ui-sref="menu.foodies">-->
-            <!--<img src="img/menu/category/transparent.gif">-->
-            <!--<a>FOODIES</a>-->
-        <!--</button>-->
+        <button class="button button-clear category" menu-close ui-sref="menu.foodies">
+            <img src="img/menu/category/transparent.gif">
+            <a>FOODIES</a>
+        </button>
         <button class="button button-clear category" menu-close ui-sref="menu.info">
             <img src="img/menu/category/transparent.gif">
             <a>INFO</a>
