add festival as ios

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -189,6 +189,9 @@
     height: 50px !important;
 }
 
+.platform-ios .bar-header{
+    height: 70px !important;
+}
 
 .logo{
     width: 100%;
@@ -205,6 +208,10 @@
 .menu-button{
     height: 30px;
     margin-top:5px;
+}
+
+.platform-ios .menu-button{
+    padding: 2px;
 }
 
 .buttons-left:hover, .buttons-right:hover{
@@ -439,6 +446,10 @@
     text-decoration: none;
 }
 
+.platform-ios .category a{
+    font-size: 22px !important;
+}
+
 .category a:hover{
     opacity: 0.8;
 }
@@ -452,8 +463,16 @@
     height: 35px;
 }
 
+.platform-ios .header-right-menu img{
+    padding: 2px;
+}
+
 .header-right-menu .button-clear{
     margin-top: 3px !important;
+}
+
+.platform-ios .header-right-menu .button-clear{
+    margin-top: 25px !important;
 }
 
 .sidebar-right .menu-tabs{
@@ -583,6 +602,10 @@
     font-size: 14px;
     font-weight: 700;
     color: #ffffff;
+}
+
+.platform-ios .discover .subtitle .center{
+    padding: 2% !important;
 }
 
 .subtitle .center{
@@ -754,6 +777,10 @@
     height: 40px;
 }
 
+.platform-ios .list .right img{
+    padding: 4px;
+}
+
 .coolway .header{
     background-color: #333333 !important;
 }
@@ -897,6 +924,11 @@
 .artist .list .favorite img{
     height: 40px !important;
     width: 40px !important;
+}
+
+
+.platform-ios .artist .list .favorite img{
+    padding: 5px;
 }
 
 .discover .legend{
@@ -1059,6 +1091,10 @@
     color: #ffffff !important;
 }
 
+.platform-ios .login-header{
+    height: 75px !important;
+}
+
 .login-header .button-clear, .login-header .button-clear{
     color: #ffffff !important;
 }
@@ -1096,6 +1132,14 @@
     /*background: -webkit-linear-gradient(top,  rgba(245,229,193,0.7) 99%,rgba(245,229,193,0) 100%,rgba(245,229,193,0) 101%);*/
     /*background: linear-gradient(to bottom,  rgba(245,229,193,0.7) 99%,rgba(245,229,193,0) 100%,rgba(245,229,193,0) 101%);*/
     /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3f5e5c1', endColorstr='#00f5e5c1',GradientType=0 );*/
+}
+
+.platform-ios .login-content{
+    margin-top:  -65px !important;
+}
+
+.platform-ios .div-form{
+    margin-top: 70px !important;
 }
 
 .login-content .title{
