--- a/www/templates/user/sign_in.html
+++ b/www/templates/user/sign_in.html
@@ -7,9 +7,9 @@
         <div class="options">
             <img src="img/login/facebook.png" ng-click="loginFacebook()">
             <img src="img/login/email.png" ng-click="view.show_login = 'form';">
-            <!--<div class="later">-->
-                <!--<a ng-click="later()">Registrarme m&aacute;s tarde</a>-->
-            <!--</div>-->
+            <div class="later">
+                <a ng-click="later()">Registrarme m&aacute;s tarde</a>
+            </div>
         </div>
     </div>
     <div ng-show="view.show_login === 'form'">
